# Personal_diary

./: .env.sample  Dockerfile  README.md  diary_entries_fixture.json  docker-compose.yaml  pyproject.toml  users_fixture.json
.github/workflows/: ci.yml
jotter/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
personal_diary/: admin.py  forms.py  models.py  services.py  urls.py  views.py
personal_diary/management/commands/: add_entries.py
personal_diary/migrations/: 0001_initial.py  0002_initial.py  0003_diaryentry_reminder_date_alter_diaryentry_create_at_and_more.py  0004_diaryentry_reminder_time_and_more.py  0005_remove_diaryentry_reminder_time_and_more.py  0006_calendar.py  0007_remove_calendar_datetime_remove_calendar_name_and_more.py  0008_delete_calendar.py  0009_alter_contact_options.py  0010_alter_diaryentry_owner.py  0011_alter_diaryentry_create_at_and_more.py
personal_diary/templates/: adding_diary_entry.html  base.html  contacts.html  diary_entries.html  diary_entry.html  diary_entry_confirm_delete.html  editing_diary_entry.html  error_403.html  error_404.html  header.html  home.html  main_menu.html  nav_pagination.html
static/css/: nav_pagination.css
users/: admin.py  forms.py  models.py  services.py  urls.py  validators.py  views.py
users/management/commands/: add_users.py  csu.py  print_perm.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_alter_user_phone_number.py  0004_alter_user_phone_number.py  0005_alter_user_phone_number.py  0006_alter_user_phone_number.py
users/templates/: changing_password.html  deleting_profile.html  login.html  password_recovery.html  password_reset.html  profile.html  registration.html
