[project]
name = "personal-diary"
version = "0.1.0"
description = ""
authors = [
    {name = "Kovkov-D-S",email = "158774590+Kovkov-D-S@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools (>=80.7.1,<81.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
