[project]
name = "personal-diary"
version = "0.1.0"
description = ""
authors = [
    {name = "Kovkov-D-S",email = "158774590+Kovkov-D-S@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools (>=80.7.1,<81.0.0)",
    "django (>=5.2.1,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "django-countries (>=7.6.1,<8.0.0)",
    "django-phonenumber-field (>=8.1.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
